pipeline to main

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,7 +2,7 @@ name: My First WorkFlow
 on:
   push:
     branches:
-    - "release"
+    - "main"
 jobs:
   echo_the_date:
   runs-on: ubuntu-latest
