--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,3 +11,21 @@ jobs:
     run: echo "The current date and time is $(date)"
   - name: echo the current branch
     run: echo ${{github.ref_name}}
+
+  test_and_deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    - name: Setup maven
+      uses: stCarolas/setup-maven@v4.3
+      with: 
+        maven-version: 3.8.2  
+    - name: Checkout the source
+      uses: action/checkout@v3
+
+    - name: run test
+      run: mvn clean test
