--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
   test_and_deploy:
     runs-on: ubuntu-latest
     env: 
-      OPENWEATHER_API: ${{secrets.openweathermap_api}}
+      OPENWEATHER_KEY: ${{secrets.openweathermap_api}}
     steps:
     - name: Setup JDK 17
       uses: actions/setup-java@v3
