--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -33,12 +33,12 @@ jobs:
     - name: run test
       run: mvn clean test
 
-    - name: deply to heroku
-    - uses: akhileshns/heroku-deploy@v3.12.12 
-        with:
-          heroku_api_key: ${{secrets.HEROKU_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-          heroku_email: ${{secrets.EMAIL}}
+    - name: deploy to heroku
+      uses: akhileshns/heroku-deploy@v3.12.12 
+      with:
+        heroku_api_key: ${{secrets.HEROKU_KEY}}
+        heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+        heroku_email: ${{secrets.EMAIL}}
 
 
 
