--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,8 @@ on:
 jobs:
   echo_the_date:
     runs-on: ubuntu-latest
+    env: 
+      OPENWEATHERMAP_KEY: ${{secrets.openweathermap_api}}
     steps:
     - name: echo the date
       run: echo "The current date and time is $(date)"
@@ -15,7 +17,7 @@ jobs:
   test_and_deploy:
     runs-on: ubuntu-latest
     env: 
-      OPENWEATHER_KEY: ${{secrets.openweathermap_api}}
+      OPENWEATHERMAP_KEY: ${{secrets.openweathermap_api}}
     steps:
     - name: Setup JDK 17
       uses: actions/setup-java@v3
